# Vertex-Cover

./: CMakeLists.txt  README.md  cnf_converter.py  ece650-a4-kissat.cpp  ece650-a4.cpp  formatter.cpp  formatter.hpp  matrix.cpp  matrix.hpp  output_file.txt
